--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,14 +1,6 @@
 <div class="aboutUs">
 	<p>Welcome!</p>
-	<p>We are senior <a id="inlineText" href="http://ischool.uw.edu">University of Washington Informatics</a> students completing 
-our coursework with our culminating capstone project. This project was inspired 
-by our frustration in the current options available for finding volunteering 
-opportunities to participate in. Our goal for this site is to make looking 
-for opportunites to get involved in a one stop shop for students, to make it
-easier for organizations to promote the events they need help with, 
-and to cut down the time spent searching for these opportunities. Thank you 
-to the UW RSOs who were kind enough to work alongside us to help with the 
-implementation of our site!</p>
+	<p>We are senior <a id="inlineText" href="http://ischool.uw.edu">University of Washington Informatics</a> students completing our coursework with our culminating capstone project. This project was inspired by our frustration in the current options available for finding volunteering opportunities to participate in. Our goal for this site is to make looking for opportunites to get involved in a one stop shop for students, to make it easier for organizations to promote the events they need help with, and to cut down the time spent searching for these opportunities. Thank you to the UW RSOs who were kind enough to work alongside us to help with the implementation of our site!</p>
 	<p>Thank you for visiting and we hope you benefit from our services.</p>
 	<p>Best,</p>
 	<p>Hamed Barahimi | Emily Boushey | Madeline Boushey | Cyrus Kazemi</p>
