calendar checkboxes clear on refresh

--- a/app/views/events/calendar.html.erb
+++ b/app/views/events/calendar.html.erb
@@ -84,8 +84,9 @@
 
 	</tfoot>
 </table>
-
-<input type="checkbox" name="Business"   /><label for="Business">Business</label>
-<input type="checkbox" name="rso2"   /><label for="RSO1">RSO2</label>
-<input type="checkbox" name="rso3"   /><label for="RSO1">RSO3</label>
-<input type="checkbox" name="rso4"   /><label for="RSO1">RSO4</label>
+<form id="filter_form">
+	<input type="checkbox" name="Business"   /><label for="Business">Business</label>
+	<input type="checkbox" name="rso2"   /><label for="RSO1">RSO2</label>
+	<input type="checkbox" name="rso3"   /><label for="RSO1">RSO3</label>
+	<input type="checkbox" name="rso4"   /><label for="RSO1">RSO4</label>
+</form>
