updated cal filter buttons

--- a/public/stylesheets/calendar.css
+++ b/public/stylesheets/calendar.css
@@ -88,3 +88,14 @@
 	color: black;
 	text-decoration: none;
 }
+#cal_buttons_left{
+	float:right;
+	width:250px;
+}
+#cal_buttons_right{
+	float:left;
+	width:250px;
+}
+.button_wrapper {
+	width:500px;
+}
