calendar buttons fixed

--- a/app/views/events/calendar.html.erb
+++ b/app/views/events/calendar.html.erb
@@ -88,25 +88,27 @@
 <form id="filter_form">
 	<div class="button_wrapper">
 		<div id="cal_buttons_left">
-			<input type="checkbox" name="Academic"   /><label for="Academic">Academic</label><br/>
-			<input type="checkbox" name="Business"   /><label for="Business">Business</label><br/>
-			<input type="checkbox" name="Cultural_International"   /><label for="Cultural_International">Cultural/International</label><br/>
-			<input type="checkbox" name="Engineering"   /><label for="Engineering">Engineering</label><br/>
-			<input type="checkbox" name="Fraternities_Sororities"   /><label for="Fraternities_Sororities">Fraternities & Sororities</label><br/>
-			<input type="checkbox" name="Health_Sciences"   /><label for="Health_Sciences">Health Sciences</label><br/>
-			<input type="checkbox" name="Honorary"   /><label for="Honorary">Honorary</label><br/>
-			<input type="checkbox" name="Law"   /><label for="Law">Law</label><br/>
-			<input type="checkbox" name="Living_Groups"   /><label for="Living_Groups">LivingGroups</label>
+			<input type="checkbox" name="Academic"   /><label for="Academic"> Academic</label><br/>
+			<input type="checkbox" name="Cultural_International"   /><label for="Cultural_International"> Cultural/International</label><br/>
+			<input type="checkbox" name="Fraternities_Sororities"   /><label for="Fraternities_Sororities"> Fraternities & Sororities</label><br/>		
+			<input type="checkbox" name="Honorary"   /><label for="Honorary"> Honorary</label><br/>
+			<input type="checkbox" name="Living_Groups"   /><label for="Living_Groups"> LivingGroups</label><br />
+			<input type="checkbox" name="Performing"   /><label for="Performing"> Performing</label><br />
+			<input type="checkbox" name="Recreation"   /><label for="Recreation"> Recreation</label><br/>
+			<input type="checkbox" name="Sciences"   /><label for="Sciences"> Sciences</label><br/>
+			<input type="checkbox" name="Sports"   /><label for="Sports"> Sports</label>
 		</div>
 		<div id="cal_buttons_right">
-			<input type="checkbox" name="Medical_Dental_Nursing"   /><label for="Medical_Dental_Nursing">Medical/Dental/Nursing</label><br/>
-			<input type="checkbox" name="Performing"   /><label for="Performing">Performing</label><br/>
-			<input type="checkbox" name="Political_Social_Action"   /><label for="Political_Social_Action">Political/Social/Action</label><br/>
-			<input type="checkbox" name="Recreation"   /><label for="Recreation">Recreation</label><br/>
-			<input type="checkbox" name="Religious_Spiritual"   /><label for="Religious_Spiritual">Religious/Spiritual</label><br/>
-			<input type="checkbox" name="Sciences"   /><label for="Sciences">Sciences</label><br/>
-			<input type="checkbox" name="Special_Interest"   /><label for="Special_Interest">Special/Interest</label><br/>
-			<input type="checkbox" name="Sports"   /><label for="Sports">Sports</label>
+			<input type="checkbox" name="Business"   /><label for="Business"> Business</label><br/>
+			<input type="checkbox" name="Engineering"   /><label for="Engineering"> Engineering</label><br/>
+			<input type="checkbox" name="Health_Sciences"   /><label for="Health_Sciences"> Health Sciences</label><br/>
+			<input type="checkbox" name="Law"   /><label for="Law"> Law</label><br/>
+			<input type="checkbox" name="Medical_Dental_Nursing"   /><label for="Medical_Dental_Nursing"> Medical/Dental/Nursing</label><br/>			
+			<input type="checkbox" name="Political_Social_Action"   /><label for="Political_Social_Action"> Political/Social/Action</label><br/>
+			<input type="checkbox" name="Religious_Spiritual"   /><label for="Religious_Spiritual"> Religious/Spiritual</label><br/>
+			<input type="checkbox" name="Special_Interest"   /><label for="Special_Interest"> Special/Interest</label><br/>
+			
 		</div>
 	</div>
+	<div class="clear"></div>
 </form>
