--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -34,6 +34,10 @@
 			<%= f.datetime_select :end_time, :size => 30 %>
 		</div>
 		<div>
+			<%= f.label :volunteers_needed %>
+			<%= f.text_field :volunteers_needed, :size => 30 %>
+		</div>
+		<div>
 			<%= f.label :description %>
 			<%= f.text_area :description, :size => '30x10' %>
 		</div>
