--- a/public/stylesheets/calendar.css
+++ b/public/stylesheets/calendar.css
@@ -11,7 +11,7 @@
 	margin: 10px auto;
 	font-size: 20px;
 }
-#eventsCal td, th {
+#eventsCal td, #eventsCal th {
 	width: 81px;
 	height: 81px;
 	text-align: center;
@@ -84,9 +84,16 @@
 	font-weight: bold;
 	color: #222;
 }
+
+#eventsCal .events li span.title a:hover{
+	text-decoration:underline;
+	cursor: pointer;
+}
+
 #eventsCal a {
 	color: black;
 	text-decoration: none;
+	cursor: pointer;
 }
 #cal_buttons_left{
 	float:left;
