--- a/app/views/events/calendar.html.erb
+++ b/app/views/events/calendar.html.erb
@@ -41,7 +41,7 @@
 				<% event_date = e.start_time.to_date %>
 				<% if event_date == current_date %>
 					<li class="<%=e.rso_type %>">
-						<span class="title"><%= e.name %></span>
+						<span class="title"><a href="/events/show/<%= e.id %>"><%= e.name %></a></span>
 						<span class="desc"><%= e.location %></span>
 					</li>				
 				<% end %>
@@ -80,25 +80,26 @@
 		</tr>
 		</tbody>
 		<tfoot>
-			<th><a href="/events/calendar/<%= "#{@minus1year.strftime('%m%Y')}" %>"> << </a>
-			<th><a href="/events/calendar/<%= "#{@minus1month.strftime('%m%Y')}" %>"> < </a>
+			<th><a href="/events/calendar/<%= "#{@minus1year.strftime('%m%Y')}" %>"> << </a></th>
+			<th><a href="/events/calendar/<%= "#{@minus1month.strftime('%m%Y')}" %>"> < </a></th>
 			<th></th>
 			<th></th>
 			<th></th>
-			<th><a href="/events/calendar/<%= "#{@plus1month.strftime('%m%Y')}" %>"> > </a>
-			<th><a href="/events/calendar/<%= "#{@plus1year.strftime('%m%Y')}" %>"> >> </a>
+			<th><a href="/events/calendar/<%= "#{@plus1month.strftime('%m%Y')}" %>"> > </a></th>
+			<th><a href="/events/calendar/<%= "#{@plus1year.strftime('%m%Y')}" %>"> >> </a></th>
 
 	</tfoot>
 </table>
 
 <form id="filter_form">
+
 	<div class="button_wrapper">
 		<div id="cal_buttons_left">
 			<input type="checkbox" name="Academic"   /><label for="Academic"> Academic</label><br/>
-			<input type="checkbox" name="Cultural_International"   /><label for="Cultural_International"> Cultural/International</label><br/>
-			<input type="checkbox" name="Fraternities_Sororities"   /><label for="Fraternities_Sororities"> Fraternities & Sororities</label><br/>		
+			<input type="checkbox" name="Cultural"   /><label for="Cultural"> Cultural/International</label><br/>
+			<input type="checkbox" name="Fraternities"   /><label for="Fraternities"> Fraternities & Sororities</label><br/>		
 			<input type="checkbox" name="Honorary"   /><label for="Honorary"> Honorary</label><br/>
-			<input type="checkbox" name="Living_Groups"   /><label for="Living_Groups"> LivingGroups</label><br />
+			<input type="checkbox" name="LivingGroups"   /><label for="LivingGroups"> LivingGroups</label><br />
 			<input type="checkbox" name="Performing"   /><label for="Performing"> Performing</label><br />
 			<input type="checkbox" name="Recreation"   /><label for="Recreation"> Recreation</label><br/>
 			<input type="checkbox" name="Sciences"   /><label for="Sciences"> Sciences</label><br/>
@@ -107,12 +108,12 @@
 		<div id="cal_buttons_right">
 			<input type="checkbox" name="Business"   /><label for="Business"> Business</label><br/>
 			<input type="checkbox" name="Engineering"   /><label for="Engineering"> Engineering</label><br/>
-			<input type="checkbox" name="Health_Sciences"   /><label for="Health_Sciences"> Health Sciences</label><br/>
+			<input type="checkbox" name="Health"   /><label for="Health"> Health Sciences</label><br/>
 			<input type="checkbox" name="Law"   /><label for="Law"> Law</label><br/>
-			<input type="checkbox" name="Medical_Dental_Nursing"   /><label for="Medical_Dental_Nursing"> Medical/Dental/Nursing</label><br/>			
-			<input type="checkbox" name="Political_Social_Action"   /><label for="Political_Social_Action"> Political/Social/Action</label><br/>
-			<input type="checkbox" name="Religious_Spiritual"   /><label for="Religious_Spiritual"> Religious/Spiritual</label><br/>
-			<input type="checkbox" name="Special_Interest"   /><label for="Special_Interest"> Special/Interest</label><br/>
+			<input type="checkbox" name="Medical"   /><label for="Medical"> Medical/Dental/Nursing</label><br/>			
+			<input type="checkbox" name="Political"   /><label for="Political"> Political/Social/Action</label><br/>
+			<input type="checkbox" name="Religious"   /><label for="Religious"> Religious/Spiritual</label><br/>
+			<input type="checkbox" name="Special"   /><label for="Special"> Special/Interest</label><br/>
 			
 		</div>
 	</div>
