Fixed some styles specifically with buttons

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -63,8 +63,8 @@
 					                    ["Special Interest", "Special"],
 					                    ["Sports", "Sports"]] %>
 		</div>
-		<div>
-			<%= image_submit_tag "../images/submitButtonBlueBig.png" %>
+		<div class="centerIt">
+			<%= image_submit_tag "../images/submitButtonFancy.png", { :id => "search_button" } %>
 		</div>
 	<% end %>
 </div>
