--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -23,7 +23,7 @@
 		</tr>
 		<tr>
 			<td colspan="2">
-				<a class="fancy_button" href="/events/new">
+				<a class="fancy_button" href="#">
 				  <span style="background-color: #0071bc;">Add to my events</span>
 				</a>
 			</td>
