--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,15 +2,16 @@
 <div class="insideDiv">
 	<h1>Hello, <%= @user.first_name %>!</h1>
 	<h3 class="headerBar">Your Opportunities:</h3>
-	
-	<% unless @events.empty? %>
-		<div class="tiles" style="width: 800px;">
-		<% @events.each do |e| %>
-			<a href="../events/show/<%= e.id %>"><%= e.start_time.strftime(fmt='%m/%d/%Y') %>: <%= e.name	 %> </a>
+	<% if signed_in? %>
+		<% unless @events.empty? %>
+			<div class="tiles" style="width: 800px;">
+			<% @events.each do |e| %>
+				<a href="../events/show/<%= e.id %>"><%= e.start_time.strftime(fmt='%m/%d/%Y') %>: <%= e.name	 %> </a>
+				<div class="clear"></div>
+			<% end %>
+			</div>
 			<div class="clear"></div>
-		<% end %>
-		</div>
-					<div class="clear"></div>
-		<span class="smallButton">Find More Opportunities</span>
-	<% end %>	
+			<span class="smallButton">Find More Opportunities</span>
+		<% end %>	
+	<% end %>
 </div>
