--- a/public/stylesheets/buttons.css
+++ b/public/stylesheets/buttons.css
@@ -93,5 +93,14 @@ a.fancy_button span:active, button.fancy_button span:active {
 	border: 0px;
 	background-color: white;
 	cursor: pointer;
-	
+}
+
+#sign_up_button {
+	background-image: url("../images/signUpButtonFancy.png");
+	background-repeat: no-repeat;
+	width: 110px;
+	height: 40px;
+	border: 0px;
+	background-color: white;
+	cursor: pointer;
 }
