--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,9 @@
 			<% end %>
 			</div>
 			<div class="clear"></div>
-			<span class="smallButton">Find More Opportunities</span>
+			<a href="/events/all">
+				<span class="smallButton">Find More Opportunities</span>
+			</a>
 		<% end %>	
 	<% end %>
 </div>
