--- a/app/views/events/all.html.erb
+++ b/app/views/events/all.html.erb
@@ -2,9 +2,12 @@
 	<h3 class="headerBar">All Available Opportunities: </h3>
 	<span style="float: right; padding-top: 5px; padding-bottom: 5px;" id="display_nav">List | <a href="/events/calendar">Calendar</a></span>
 	<div class="clear"></div>
+	<% if signed_in? %>
 	<a class="fancy_button" href="/events/new" style="float: right;">
 	  <span style="background-color: #0071bc;">Create an event</span>
 	</a>
+	
+	<% end %>
 	<table class="eventDisplay" id="allOppTable">
 		<tr>
 			<th>Date</th><th>Name</th><th>Host</th><th>Category</th><th>Volunteers needed</th>
