--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -14,7 +14,7 @@
 			<td>Where:</td><td><%= @event.location %></td>
 		</tr>
 		<tr>
-			<td>Volunteers needed:</td><td><%= [@event.volunteers_needed,0].max %></td>
+			<td>Volunteers needed:</td><td><%= @event.volunteers_needed %></td>
 		</tr>
 		<tr>
 			<td>Description:</td><td><%= @event.description %></td>
