--- a/app/views/events/all.html.erb
+++ b/app/views/events/all.html.erb
@@ -18,7 +18,7 @@
 				<td><a href="/events/show/<%= event.id %>"><%= event.name %></a></td>
 				<td><%= event.organization %></td>
 				<td><%= event.rso_type %></td>
-				<td><%= [event.volunteers_needed - event.attendees.count,0].max %></td>
+				<td><%= [event.volunteers_needed,0].max %></td>
 			</tr>
 		<% end %>
 	</table>	
