testing event.user_id

--- a/app/views/events/all.html.erb
+++ b/app/views/events/all.html.erb
@@ -19,6 +19,7 @@
 				<td><%= event.organization %></td>
 				<td><%= event.rso_type %></td>
 				<td><%= [event.volunteers_needed,0].max %></td>
+				<td><%= event.user_id %></td>
 			</tr>
 		<% end %>
 	</table>	
