--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,8 +11,8 @@
 			<% end %>
 			</div>
 			<div class="clear"></div>
-			<a href="/events/all">
-				<span class="smallButton">Find More Opportunities</span>
+			<a class="fancy_button" href="/events/all	">
+			  <span style="background-color: #0071bc;">Find more</span>
 			</a>
 		<% end %>	
 	<% end %>
