--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -23,7 +23,7 @@
 			<td><%= f.text_field :phone, :size => 30 %></td>
 		</tr>
 		<tr>
-			<td><%= f.label :password %></td>
+			<td><%= f.label :password, "Password (6 character minimum)" %></td>
 			<td><%= f.password_field :password, :size => 30 %></td>
 		</tr>
 		<tr>
